compiler/tests/fa/errors/redefine.salam
// انتظار: خطا۰۶۱
// زبان: فارسی
تابع کار():
تمام

تابع کار():
تمام

تابع اصلی:
    چاپ 1
تمام
